2002-06-25  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/oprofile.1.in:
	* doc/oprofile.xml: document op_start --kernel-range option
	* gui/oprf_start.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h: 
	* gui/ui/oprof_start_base.ui:
	* utils/op_start: implement --kernel-range

	* gui/Makefile.in: force ui sub-dir build
	
2002-06-25  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* configure.in: new AX_KERNEL_VERSION()  to allow kernel version check,
	  use it to check minimal kernel version and fix 2.5.19 breakage
	* module/.cvsignore:
	* module/x86/.cvsignore: add .*.cmd
	* module/Makefile.in:
	* module/x86/Makefile.in: fix 2.5.19 make through EXTRA_CFLAGS_MODULE
	* module/compat22.h: fix missing BUG() definition in 2.2 kernel
	* module/x86/oprofile_nmi.S: fix minor 2.2 compile problem

	* pp/op_to_source.cpp: minor comment fix

2002-06-18  John Levon  <moz@compsoc.man.ac.uk>

	* utils/op_start:
	* pp/samples_file.h:
	* libop/op_config.h:
	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* dae/oprofiled.c:
	* dae/opd_kernel.h:
	* dae/opd_kernel.c: don't parse System.map any more,
	  now we work based off vmlinux alone
	 
	* dae/opd_proc.c: move eip_is_kernel() into opd_kernel.c
 
2002-06-18  John Levon  <moz@compsoc.man.ac.uk>

	* README:
	* doc/oprofile.xml: update credits
 
2002-06-16  John Levon  <moz@compsoc.man.ac.uk>

	* pp/op_time_options.h:
	* pp/op_time_options.cpp: move private stuff out of
	  options namespace
 
2002-06-16  John Levon  <moz@compsoc.man.ac.uk>

	* pp/counter_util.cpp: stop when we reach the first
	  available counter for sorting

	* pp/op_to_source.cpp: use absolute sample file name 

	* pp/samples_file.cpp: better error message

2002-06-16  John Levon  <moz@compsoc.man.ac.uk>

	* various: remove spurious == false, == true
 
2002-06-15  John Levon  <moz@compsoc.man.ac.uk>

	* dae/oprofiled.c:
	* libop/op_interface.h:
	* libop++/op_print_event.h: