@@ -26,6 +26,9 @@ unsigned long virt_apic_base;
  * error to be made w/o a full rebuild of supported kernel version */
 /* how about __attribute__(__unused__) then ? */
 
+/* all this file is preempt patch safe because we can get problem only
+ * on smp machine but on smp this stuff is never called. */
+
 /*static*/ void set_pte_phys(ulong vaddr, ulong phys)
 {
 	pgprot_t prot;
