@@ -26,6 +26,8 @@ static uint op_nr_counters = 2;
 static int separate_running_bit;
 
 /* ---------------- NMI handler ------------------ */
+/* preempt: all things inside the interrupt handler are preempt safe : we
+ * never reenabme interrupt */
 
 static void op_check_ctr(uint cpu, struct pt_regs *regs, int ctr)
 {
@@ -69,6 +71,8 @@ static void pmc_setup(void *dummy)
 	uint low, high;
 	int i;
 
+	preempt_disable();
+
 	/* IA Vol. 3 Figure 15-3 */
 
 	/* Stop and clear all counter: IA32 use bit 22 of eventsel_msr0 to
@@ -100,6 +104,8 @@ static void pmc_setup(void *dummy)
 	/* Here all setup is made except the start/stop bit 22, counter
 	 * disabled contains zeros in the eventsel msr except the reserved bit
 	 * 21 */
+
+	preempt_disable();
 }
 
 static int pmc_setup_all(void)
@@ -111,6 +117,7 @@ static int pmc_setup_all(void)
 	return 0;
 }
 
+/* called preempt disable */
 inline static void pmc_start_P6(void)
 {
 	uint low,high;
@@ -119,6 +126,7 @@ inline static void pmc_start_P6(void)
 	wrmsr(eventsel_msr[0], low | (1 << 22), high);
 }
 
+/* called preempt disable */
 inline static void pmc_start_Athlon(void)
 {
 	uint low,high;
@@ -132,6 +140,7 @@ inline static void pmc_start_Athlon(void)
 	}
 }
 
+/* called preempt disable */
 static void pmc_start(void *info)
 {
 	if (info && (*((uint *)info) != op_cpu_id()))
@@ -148,6 +157,7 @@ static void pmc_start(void *info)
 		pmc_start_Athlon();
 }
 
+/* called preempt disable */
 inline static void pmc_stop_P6(void)
 {
 	uint low,high;
@@ -156,6 +166,7 @@ inline static void pmc_stop_P6(void)
 	wrmsr(eventsel_msr[0], low & ~(1 << 22), high);
 }
 
+/* called preempt disable */
 inline static void pmc_stop_Athlon(void)
 {
 	uint low,high;
@@ -169,6 +180,7 @@ inline static void pmc_stop_Athlon(void)
 	}
 }
 
+/* called preempt disable */
 static void pmc_stop(void *info)
 {
 	if (info && (*((uint *)info) != op_cpu_id()))
@@ -189,10 +201,14 @@ static void pmc_select_start(uint cpu)
 	if (partial_stop)
 		return;
 
+	preempt_disable();
+
 	if (cpu == op_cpu_id())
 		pmc_start(NULL);
 	else
 		smp_call_function(pmc_start, &cpu, 0, 1);
+
+	preempt_enable();
 }
 
 static void pmc_select_stop(uint cpu)
@@ -200,10 +216,14 @@ static void pmc_select_stop(uint cpu)
 	if (partial_stop)
 		return;
 
+	preempt_disable();
+
 	if (cpu == op_cpu_id())
 		pmc_stop(NULL);
 	else
 		smp_call_function(pmc_stop, &cpu, 0, 1);
+
+	preempt_enable();
 }
 
 static void pmc_start_all(void)
@@ -221,16 +241,20 @@ static void pmc_start_all(void)
 		}
 	}
 
+	preempt_disable();
 	install_nmi();
 	smp_call_function(pmc_start, NULL, 0, 1);
 	pmc_start(NULL);
+	preempt_enable();
 }
 
 static void pmc_stop_all(void)
 {
+	preempt_disable();
 	smp_call_function(pmc_stop, NULL, 0, 1);
 	pmc_stop(NULL);
 	restore_nmi();
+	preempt_enable();
 }
 
 static int pmc_check_params(void)
@@ -296,8 +320,6 @@ static int pmc_init(void)
 	int i;
 	int err = 0;
 
-	preempt_disable();
- 
 	if (sysctl.cpu_type == CPU_ATHLON) {
 		op_nr_counters = 4;
 		separate_running_bit = 1;
@@ -322,6 +344,8 @@ static int pmc_init(void)
 			perfctr_msr[1] = MSR_P6_PERFCTR1;
 			break;
 	}
+
+	preempt_disable();  /* FIXME: required ? */
 
 	for (i = 0 ; i < op_nr_counters ; ++i) {
 		rdmsr(eventsel_msr[i], saved_eventsel_low[i], saved_eventsel_high[i]);
